# particles

./: CMakeLists.txt  README.md  todo.org
src/: Parameters.h  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/kernels/: Particle.cu  Particle.cuh  kernels.h  kernels1.cu  kernels1.cuh  kernels1.h  kernels2.cu  kernels3.cu  kernels4.cu  kernels5.cu  kernels6.cu  kernels7.cu  kernels8.cu
src/lib/: CpuParticleEngine.cpp  CpuParticleEngine.h  GpuParticleEngine1.cpp  GpuParticleEngine1.h  GpuParticleEngine3.cpp  GpuParticleEngine3.h  Particle.cpp  Particle.h  ParticleEngine.cpp  ParticleEngine.h
src/test/: test_ParticleEngine.cpp  test_particles.cpp
